@@ -1,7 +1,7 @@
 #!/usr/bin/env ruby
 
 # Syllable Build System
-# Version 0.6.81
+# Version 0.6.82
 # Copyright (c) 2002-2006 Kaj de Vos
 # License: GPL 2 or any later version
 
@@ -1633,7 +1633,7 @@ arg1, arg2, arg3 = ARGV
 
 case arg1
 when '-v', '--version'
-	puts 'Syllable Build System 0.6.81',
+	puts 'Syllable Build System 0.6.82',
 		'Copyright (c) 2002-2006 Kaj de Vos',
 		'License: GPL 2 or any later version'
 when '?', '-?', '-h', '-help', '--help'
@@ -1718,9 +1718,7 @@ else
 						(File.join @image, 'atheos/sys/bin') + ':'
 #						Executables may not be position-independent:
 #						(File.join @image, 'atheos/usr/glibc/bin') + ':' +
-#						(File.join @image, 'atheos/usr/glibc/sbin') + ':' +
-#						(File.join @image, 'atheos/usr/glibc2/bin') + ':' +
-#						(File.join @image, 'atheos/usr/glibc2/sbin') + ':'
+#						(File.join @image, 'atheos/usr/glibc/sbin') + ':'
 					else
 						''
 					end +
@@ -1747,10 +1745,8 @@ else
 
 				headers =
 					if @systemBuild
-						# New C library if it's there
-						(File.join @image, 'atheos/usr/glibc/include') + ':' +
 						# C library headers
-						(File.join @image, 'atheos/usr/glibc2/include') + ':' +
+						(File.join @image, 'atheos/usr/glibc/include') + ':' +
 						# System headers
 						(File.join @image, 'atheos/usr/include') + ':' +
 						(File.join @image, 'atheos/sys/include') + ':' +
@@ -1798,8 +1794,7 @@ else
 					if @systemBuild
 						(File.join @image, 'atheos/sys/libs') + ':' +
 						(@syllable ? '' : File.join(@image, 'atheos/sys') + ':') +
-						(File.join @image, 'atheos/usr/glibc/lib') + ':' +
-						(File.join @image, 'atheos/usr/glibc2/lib') + ':'
+						(File.join @image, 'atheos/usr/glibc/lib') + ':'
 #						(File.join @stage, 'indexes/lib') + ':'
 					else
 						''
