@@ -30,17 +30,17 @@ patch
 	mkdir -p stage
 	cp -r atheos/sys/include			stage
 ;	cp -r system/sys/include			stage
-	cp -r atheos/usr/glibc2/include/*	stage/include
+	cp -r atheos/usr/glibc/include/*	stage/include
 	mkdir -p stage/lib
 	cp atheos/sys/libs/*				stage/lib
 ;	Static libraries:
-;	cp -r atheos/usr/glibc2/lib/*		stage/lib
+;	cp -r atheos/usr/glibc/lib/*		stage/lib
 ;	cp -r gcc/lib/*						stage/lib
 
 configure-options
 	--target=i586-pc-syllable
 ;	GLibC headers for Syllable:
-;	--with-headers=$PWD/../atheos/usr/glibc2/include
+;	--with-headers=$PWD/../atheos/usr/glibc/include
 ;	--with-sysroot=$PWD/../stage
 	--enable-languages=c,c++
 	--with-arch=i586
@@ -55,7 +55,7 @@ configure-options
 ;	--disable-nls
 
 make-env
-;	C_INCLUDE_PATH		$PWD/../atheos/sys/include:$PWD/../atheos/usr/glibc2/include
+;	C_INCLUDE_PATH		$PWD/../atheos/sys/include:$PWD/../atheos/usr/glibc/include
 	C_INCLUDE_PATH		$PWD/../stage/include
 ;	CPLUS_INCLUDE_PATH	$PWD/../stage/include
 ;	The cross-assembling toolchain:
@@ -67,4 +67,3 @@ make-targets
 install-targets			install-gcc
 ; The normal links are not relevant:
 links
-
