@@ -1,72 +1,0 @@
-71
-(GMT-12:00) Eniwetok, Kwajalein|GMT-12|/Etc/GMT-12|130
-(GMT-11:00) Midway Island, Samoa|GMT-11|/Pacific/Midway|125
-(GMT-10:00) Hawaii|GMT-10|/US/Hawaii|120
-(GMT-09:00) Alaska|GMT-9|/US/Alaska|105
-(GMT-08:00) Pacific Time (US & Canada), Tijuana|PST|/US/Pacific|90
-(GMT-07:00) Arizona|GMT-7|/US/Arizona|85
-(GMT-07:00) Mountain Time (US & Canada)|MST|/US/Mountain|85
-(GMT-06:00) Central America|GMT-6|/Etc/GMT-6|75
-(GMT-06:00) Central Time (US & Canada)|CST|/US/Central|75
-(GMT-06:00) Mexico City|GMT-6|/America/Mexico_City|75
-(GMT-06:00) Saskatchewan|GMT-6|/Canada/Saskatchewan|75
-(GMT-05:00) Bogota, Lima, Quito|GMT-5|/America/Bogota|65
-(GMT-05:00) Eastern Time (US & Canada)|EST|/US/Eastern|65
-(GMT-05:00) Indiana (East)|GMT-5|/US/Indiana-Starke|65
-(GMT-04:00) Atlantic Time (Canada)|AST/ADT|/Canada/Atlantic|55
-(GMT-04:00) Caracas, La Paz|GMT-4|/America/Caracas|50
-(GMT-04:00) Santiago|GMT-4|/America/Santiago|50
-(GMT-03:30) Newfoundland|GMT-3:30|/Canada/Newfoundland|48
-(GMT-03:00) Brasilia|GMT-3|/Brazil/East|48
-(GMT-03:00) Buenos Aires, Georgetown|GMT-3|/America/Buenos_Aires|43
-(GMT-03:00) Greenland|GMT-3|/Etc/GMT-3|37
-(GMT-02:00) Mid-Atlantic|GMT-2|/Etc/GMT-2|30
-(GMT-01:00) Azores|GMT-1|/Atlantic/Azores|20
-(GMT-01:00) Cape Verde Is.|GMT-1|/Atlantic/Cape_Verde|20
-(GMT-00:00) Casablanca, Monrovia|GMT-0|/Africa/Casablanca|10
-(GMT) Dublin, Edinburgh, Lisbon, London|GMT|/Etc/Greenwich|10
-(GMT+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Veinna|GMT+1|/Europe/Berlin|5
-(GMT+01:00) Brussels, Copenhagen, Madrid, Paris|GMT+1|/Europe/Paris|5
-(GMT+01:00) Belgrade, Bratislava, Budapest, Ljubljana, Prague|GMT+1|/Europe/Bratislava|5
-(GMT+01:00) Sarajevo, Skopje, Sofija, Vilnius, Warsaw, Zagreb|GMT+1|/Europe/Sofija|5
-(GMT+01:00) West Central Africa|GMT+1|/Etc/GMT+1|200
-(GMT+02:00) Athens, Istanbul, Minsk|GMT+2|/Europe/Athens|200
-(GMT+02:00) Bucharest|GMT+2|/Europe/Bucharest|0
-(GMT+02:00) Cairo|GMT+2|/Africa/Cairo|0
-(GMT+02:00) Harare, Pretoria|GMT+2|/Africa/Harare|0
-(GMT+02:00) Helsinki, Riga, Tallinn|GMT+2|/Europe/Riga|0
-(GMT+02:00) Jerusalem|GMT+2|/Asia/Jerusalem|0
-(GMT+03:00) Baghdad|GMT+3|/Asia/Baghdad|0
-(GMT+03:00) Kuwait, Riyadh|GMT+3|/Asia/Kuwait|0
-(GMT+03:00) Moscow, St. Petersburg, Volgograd|GMT+3|/Europe/Moscow|0
-(GMT+03:00) Nairobi|GMT+3|/Africa/Nairobi|0
-(GMT+03:30) Tehran|GMT+3:30|/Asia/Tehran|0
-(GMT+04:00) Abu Dhabi, Muscat|GMT+4|/Asia/Muscat|0
-(GMT+04:00) Baku, Tbilisi, Yerevan|GMT+4|/Asia/Baku|0
-(GMT+04:30) Kabul|GMT+4:30|/Asia/Kabul|0
-(GMT+05:00) Islamabad, Karachi, Tashkent|GMT+5|/Asia/Karachi|0
-(GMT+05:30) Calcutta, Chennai, Mumbai, New Delhi|GMT+5:30|/Asia/Calcutta|0
-(GMT+05:45) Kathmandu|GMT+5:45|/Asia/Katmandu|0
-(GMT+06:00) Almaty, Novosibirsk|GMT+6|/Asia/Almaty|0
-(GMT+06:00) Astana, Dhaka|GMT+6|/Asia/Dacca|0
-(GMT+06:30) Rangoon|GMT+6:30|/Asia/Rangoon|0
-(GMT+07:00) Bangkok, Hanoi, Jakarta|GMT+7|/Asia/Bangkok|0
-(GMT+08:00) Beijing, Chongqing, Hong Kong, Urumqi|GMT+8|/Asia/Hong_Kong|0
-(GMT+08:00) Irkutsk, Ulaan Bataar|GMT+8|/Asia/Ulan_Bator|0
-(GMT+08:00) Kuala Lumpur, Singapore|GMT+8|/Asia/Singapore|0
-(GMT+08:00) Perth|GMT+8|/Australia/Perth|0
-(GMT+08:00) Taipei|GMT+8|/Asia/Taipei|0
-(GMT+09:00) Osaka, Sapporo, Tokyo|GMT+9|/Asia/Tokyo|0
-(GMt+09:00) Seoul|GMT+9|/Asia/Seoul|0
-(GMT+09:00) Yakutsk|GMT+9|/Asia/Yakutsk|0
-(GMT+09:30) Adelaide|GMT+9:30|/Australia/Adelaide|0
-(GMT+09:30) Darwin|GMT+9:30|/Australia/Darwin|0
-(GMT+10:00) Brisbane|GMT+10|/Australia/Brisbane|0
-(GMT+10:00) Canberra, Melbourne, Sydney|GMT+10|/Australia/Sydney|0
-(GMT+10:00) Guam, Port Moresby|GMT+10|/Pacific/Guam|0
-(GMT+10:00) Hobart|GMT+10|/Australia/Hobart|0
-(GMT+10:00) Vladivostok|GMT+10|/Asia/Vladivostok|0
-(GMT+11:00) Mugaden, Solomon Is., New Caledonia|GMT+11|/GMT+11|0
-(GMT+12:00) Auckland, Wellington|GMT+11|/Australia/Auckland|0
-(GMT+12:00) Fiji, Kamchatka, Marshall Is.|GMT+12|/Pacific/Fiji|0
-(GMT+13:00) Nuku'alofa|GMT+13|/Etc/GMT+11|0
